Updated css, fixed grid alignment

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@
   border: 1px solid black;
   padding: 5px;
   width: 3em;
+  height: 3em;
   display: inline-block;
+  font-size: x-large;
+  font-weight: bolder;
   background-color: white;
 }
 .box:hover {
@@ -13,6 +16,7 @@
 
 .row {
   display: flex;
+  flex-direction: row;
 }
 
 .heading {
@@ -23,8 +27,12 @@
   display: flex;
   justify-content: center;
 }
+
 .other {
-  margin-left: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  
 }
 
 .input {
@@ -40,4 +48,9 @@
   border-color: aqua;
   box-shadow: 0 0 10px #00b894;
   outline: none;
+}
+
+h1 {
+  font-family: 'Courier New', Courier, monospace;
+
 }
